option('ENABLE_VALIDATION_OPT', type: 'boolean', value: false, description: 'Enable Vulkan Validation Layer')
option('VKH_ENABLE_VMA', type: 'boolean', value: false, description: 'Enable Vulkan Memory Allocator - For more information: https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator')
option('VMA_RECORDING_ENABLED', type: 'boolean', value: false, description: 'Enable VMA memory recording for debugging')
option('VMA_USE_STL_CONTAINERS', type: 'boolean', value: false, description: 'Use C++ STL containers instead of VMAs containers')
option('VMA_STATIC_VULKAN_FUNCTIONS', type: 'boolean', value: false, description: 'Link statically with Vulkan API')
option('VMA_DYNAMIC_VULKAN_FUNCTIONS', type: 'boolean', value: true, description: 'Fetch pointers to Vulkan functions internally (no static linking)')
option('VMA_DEBUG_ALWAYS_DEDICATED_MEMORY', type: 'boolean', value: false, description: 'Every allocation will have its own memory block')
option('VMA_DEBUG_INITIALIZE_ALLOCATIONS', type: 'boolean', value: false, description: 'Automatically fill new allocations and destroyed allocations with some bit pattern')
option('VMA_DEBUG_GLOBAL_MUTEX', type: 'boolean', value: false, description: 'Enable single mutex protecting all entry calls to the library')
option('VMA_DEBUG_DONT_EXCEED_MAX_MEMORY_ALLOCATION_COUNT', type: 'boolean', value: false, description: 'Never exceed VkPhysicalDeviceLimits::maxMemoryAllocationCount and return error')
option('VMA_DEBUG_ALIGNMENT', type: 'integer', value: 1, description: 'Minimum alignment of all allocations, in bytes. Set to more than 1 for debugging purposes only. Must be power of two.')
option('VMA_DEBUG_MARGIN', type: 'integer', value: 0, description: 'Minimum margin before and after every allocation, in bytes. Set nonzero for debugging purposes only.')
option('VMA_DEBUG_MIN_BUFFER_IMAGE_GRANULARITY', type: 'integer', value: 1, description: 'Minimum value for VkPhysicalDeviceLimits::bufferImageGranularity. Set to more than 1 for debugging purposes only. Must be power of two.')
option('VMA_SMALL_HEAP_MAX_SIZE', type: 'integer', value: 1073741824, description: 'Maximum size of a memory heap in Vulkan to consider it "small".')
option('VMA_DEFAULT_LARGE_HEAP_BLOCK_SIZE', type: 'integer', value: 268435456, description: 'Default size of a block allocated as single VkDeviceMemory from a "large" heap.')
option('VKVG_ENABLE_DBG_UTILS', type: 'boolean', value: false, description: 'Enable VKVG Debug Utilities')
option('VKVG_ENABLE_PROFILING', type: 'boolean', value: false, description: 'Compile with -pg options')
option('VKVG_RECORDING', type: 'boolean', value: true, description: 'Enable experimental recording functions')
option('VKVG_PREMULT_ALPHA', type: 'boolean', value: true, description: 'Use premultiplied alpha for internal rendering')
option('VKVG_DBG_STATS', type: 'boolean', value: true, description: 'Record contexts statistics in the device')
option('VKVG_USE_GLUTESS', type: 'boolean', value: true, description: 'Fill non-zero with glu tesselator')
option('VKVG_USE_FREETYPE', type: 'boolean', value: true, description: 'Use freetype to load and render font glyphs')
option('VKVG_USE_FONTCONFIG', type: 'boolean', value: true, description: 'Use FontConfig to resolve font names')
option('VKVG_USE_HARFBUZZ', type: 'boolean', value: true, description: 'Use harfbuzz for text layouting')
option('VKVG_LCD_FONT_FILTER', type: 'boolean', value: false, description: 'Enable freetype lcd font filtering')
option('VKVG_VK_SCALAR_BLOCK_SUPPORTED', type: 'boolean', value: true, description: 'Enable scalar block layout support')
option('VKVG_ENABLE_VALIDATION', type: 'boolean', value: false, description: 'Apply validation')
option('VKVG_ENABLE_RENDERDOC', type: 'boolean', value: false, description: 'Add vulkan layers for supporting RenderDoc')
option('VKVG_ENABLE_WIRED_FILL', type: 'boolean', value: false, description: 'Enable Debug Wire Fill')
option('ENABLE_TEST', type: 'boolean', value: true, description: 'Determines if test cases should be built.')
option('INSTALL_TEST', type: 'boolean', value: false, description: 'Determines if test cases should be installed, it will be saved in $PREFIX/bin/vkvg_tests/')
option('TEST_HIDE_WARNINGS', type: 'boolean', value: true, description: 'Hide all warnings shown in Test Cases compilation')
option('COMPILE_SHADERS', type: 'boolean', value: false, description: 'Determines if shaders should be recompiled and have shaders.h generated. (Note that shaders.h must be copied over to src/ folder as Meson Build does not allows in-source modification during build)')
option('ANDROID_NDK', type: 'string', value: '', description: 'Path to Android NDK Directory (This is used to find glslc program for shader compilation)')
option('VULKAN_SDK', type: 'string', value: '', description: 'Path to Vulkan SDK Directory (This is used to find glslc program for shader compilation)')
option('GLSLC_PATH', type: 'string', value: '', description: 'Specify absolute path to glslc if it cannot be found by any other means (This is used to find glslc program for shader compilation)')
option('XXD_PATH', type: 'string', value: '', description: 'Specify absolute path to xxd if it cannot be found by any other means (This is used to find glslc program for shader compilation)')